# cineswarm

./: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: migration_768.sql  pyproject.toml  requirements.txt  schema.sql
backend/app/: main.py
backend/app/agents/: consensus.py  critic.py  data.py  graph.py  hidden_gems.py  vibes.py
backend/app/api/: auth.py  models.py  ws.py
backend/app/core/: config.py  llm.py  safety.py  tmdb.py
backend/app/db/: supabase.py
backend/tests/: test_consensus_safety.py  test_critic.py
docs/: srs.md
docs/adr/: 001-orchestration-framework.md  002-database.md  003-llm-providers.md
frontend/: jest.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/playwright-report/: index.html
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/moderation/: page.tsx
frontend/src/app/debate/[session_id]/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/components/: DualRatingDisplay.tsx  ErrorBoundary.tsx  KidsModePinModal.tsx  ThemeToggle.tsx
frontend/src/lib/: api-client.ts  api-types.ts
frontend/test-results/: .last-run.json
frontend/tests/components/: DualRatingDisplay.test.tsx
frontend/tests/e2e/: flow.spec.ts
