[project]
name = "cineswarm-backend"
version = "0.1.0"
description = "CineSwarm backend API"
authors = [
    {name = "CineSwarm Team", email = "team@cineswarm.local"}
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.3.4",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "supabase>=2.0.0",
    "sentence-transformers>=3.0.0",
    "websockets>=12.0",
    "structlog>=24.1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "respx>=0.21.1",
]
requires-python = ">=3.12"
